# FDTD

./: .FDTDField.hpp.swp  .gitignore  Doxyfile  FDTD  FDTDField.cpp  FDTDField.hpp  Grid.hpp  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  fdtd_config.h  fdtd_config.h.in  flux_finder.py  icchelp  in_ex.json  inputs.json  log  silver.json  source.hpp  stamp-h1
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
input_files/: inputsAu_QD.json
m4/: acx_mpi.m4  ax_boost_base.m4  ax_cxx_compile_stdcxx_11.m4
output_data/: inputs.json  inputs_check.json
src/: .FDTDField.cpp.swp  .FDTDField.hpp.swp  .Obj.cpp.swp  .Obj.hpp.swp  Detector.hpp  Doxyfile  FDTDCurr.cpp  FDTDField.cpp  FDTDField.hpp  FDTDField_with_point_inc.cpp  Grid.cpp  Grid.hpp  Inputs.cpp  Inputs.hpp  Makefile  Makefile.am  Makefile.in  Obj.cpp  Obj.hpp  ProfileFunctions.hpp  Pulse.hpp  Source.hpp  enum.hpp  field_procs.py  main.cpp  pml.cpp  pml.hpp  source.hpp  test1.cpp  test2.cpp  tester  toBitMap.cpp  toBitMap.hpp  utilities.hpp
src/.deps/: FDTDField.Po  Inputs.Po  Obj.Po  main.Po  toBitMap.Po
src/DTC/: parallelDTC.cpp  parallelDTC.hpp  parallelDTCOutputFxn.cpp  parallelDTCOutputFxn.hpp  parallelDTC_BIN.cpp  parallelDTC_BIN.hpp  parallelDTC_COUT.cpp  parallelDTC_COUT.hpp  parallelDTC_FREQ.cpp  parallelDTC_FREQ.hpp  parallelDTC_TXT.cpp  parallelDTC_TXT.hpp  parallelFlux.cpp  parallelFlux.hpp  parallelStorageDTC.cpp  parallelStorageDTC.hpp  parallelStorageDTCSructs.hpp  parallelStorageFreqDTC.cpp  parallelStorageFreqDTC.hpp  toBitMap.cpp  toBitMap.hpp
src/FDTD_MANAGER/: parallelFDTDField.cpp  parallelFDTDField.hpp
src/GRID/: Grid.hpp  parallelGrid.cpp  parallelGrid.hpp
src/INPUTS/: parallelInputs.cpp  parallelInputs.hpp
src/MPI/: mpiInterface.cpp  mpiInterface.hpp  parallelUtilities.hpp
src/OBJECTS/: Obj.cpp  Obj.hpp
src/PML/: parallelPML.cpp  parallelPML.hpp
src/SOURCE/: Pulse.cpp  Pulse.hpp  parallelSource.hpp  parallelSourceNormal.cpp  parallelSourceNormal.hpp  parallelSourceOblique.cpp  parallelSourceOblique.hpp  parallelTFSF.cpp  parallelTFSF.hpp
src/UTIL/: FDTD_consts.hpp  FDTD_up_eq.cpp  FDTD_up_eq.hpp  dielectric_params.hpp  enum.hpp  mathUtils.hpp  ml_consts.hpp  typedefs.hpp  utilities.hpp  utilities_MKL.hpp  utilities_acml.hpp
